# ChangeLog for net-misc/mikutter
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/mikutter/ChangeLog,v 1.4 2011/04/22 14:10:04 naota Exp $

  22 Apr 2011; Naohiro Aota <naota@gentoo.org> -mikutter-0.0.2.12.ebuild:
  Remove mikuuter-0.0.2.12.ebuild

*mikutter-0.0.2.12-r1 (14 Apr 2011)

  14 Apr 2011; Naohiro Aota <naota@elisp.net> +mikutter-0.0.2.12-r1.ebuild:
  Fix dependency bug #362797

  02 Apr 2011; Naohiro Aota <naota@elisp.net> ChangeLog:
  Fix Manifest: gpg-signing

*mikutter-0.0.2.12 (01 Apr 2011)

  01 Apr 2011; Naohiro Aota <naota@elisp.net> +mikutter-0.0.2.12.ebuild,
  +files/mikutter, +metadata.xml:
  New ebuild for mikutter. Ebuild written by Furui Shota <mkamotsu@gmail.com>.
