@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/mikutter
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/mikutter/ChangeLog,v 1.4 2011/04/22 14:10:04 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/mikutter/ChangeLog,v 1.5 2011/05/29 14:51:42 naota Exp $
+
+*mikutter-0.0.3.0 (29 May 2011)
+
+  29 May 2011; Naohiro Aota <naota@gentoo.org> +mikutter-0.0.3.0.ebuild:
+  Version bump.
 
   22 Apr 2011; Naohiro Aota <naota@gentoo.org> -mikutter-0.0.2.12.ebuild:
   Remove mikuuter-0.0.2.12.ebuild
